Continuation of the social media app

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </a>
                  <!-- ===========================SIDE BAR================================= -->
-                 <div class="side-bar">
+                 <div class="sidebar">
                     <a href="" class="menu-item active">
                         <span><i class="uil uil-home"></i></span> <h3>Home</h3>
                     </a>
@@ -150,25 +150,25 @@
             </div>
             <!-- ===========================MIDDLE================================= -->
             <div class="middle">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
                 vitae suscipit a consequatur unde! Sint, sequi ipsum debitis
                  iure repudiandae ipsam voluptatem aliquam quo delectus amet et nihil provident iusto. Ab ducimus fugiat 
                  sed. Eveniet tenetur nesciunt ea quaerat ad, minus provident 
                  et maxime, modi blanditiis quas odit perspiciatis nostrum numquam cumque eos? A modi minus, 
                  in animi nostrum excepturi necessitatibus corporis! A facilis, similique beatae deserunt iusto soluta iste
                   cumque itaque fugit ullam ducimus est perferendis neque reiciendis quo voluptatum sint? Nemo tempora necessitatibus
-                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus?
+                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus? -->
             </div>
             <!-- ===========================RIGHT================================= -->
             <div class="right">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
+                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
                 vitae suscipit a consequatur unde! Sint, sequi ipsum debitis
                  iure repudiandae ipsam voluptatem aliquam quo delectus amet et nihil provident iusto. Ab ducimus fugiat 
                  sed. Eveniet tenetur nesciunt ea quaerat ad, minus provident 
                  et maxime, modi blanditiis quas odit perspiciatis nostrum numquam cumque eos? A modi minus, 
                  in animi nostrum excepturi necessitatibus corporis! A facilis, similique beatae deserunt iusto soluta iste
                   cumque itaque fugit ullam ducimus est perferendis neque reiciendis quo voluptatum sint? Nemo tempora necessitatibus
-                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus?
+                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus? -->
             </div>
         </div>
 
