Commitment of the socialMedia App

--- a/index.html
+++ b/index.html
@@ -148,16 +148,64 @@
                   <!-- ===========================END OF SIDEBAR================================= -->
                   <label for="create-post" class="btn btn-primary">Create-post</label>
             </div>
+            <!-- ===========================END OF LEFT================================= -->
+
+
+
             <!-- ===========================MIDDLE================================= -->
             <div class="middle">
-                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
-                vitae suscipit a consequatur unde! Sint, sequi ipsum debitis
-                 iure repudiandae ipsam voluptatem aliquam quo delectus amet et nihil provident iusto. Ab ducimus fugiat 
-                 sed. Eveniet tenetur nesciunt ea quaerat ad, minus provident 
-                 et maxime, modi blanditiis quas odit perspiciatis nostrum numquam cumque eos? A modi minus, 
-                 in animi nostrum excepturi necessitatibus corporis! A facilis, similique beatae deserunt iusto soluta iste
-                  cumque itaque fugit ullam ducimus est perferendis neque reiciendis quo voluptatum sint? Nemo tempora necessitatibus
-                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus? -->
+                <!-- ===========================STORIES================================= -->
+                <div class="stories">
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-8.jpg" alt="">
+                        </div>
+                        <p class="name">Your Story</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-9.jpg" alt="">
+                        </div>
+                        <p class="name">Lilla James</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-10.jpg" alt="">
+                        </div>
+                        <p class="name">Winie Guy</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-11.jpg" alt="">
+                        </div>
+                        <p class="name">Kofi James</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-12.jpg" alt="">
+                        </div>
+                        <p class="name">Derrick Kofi</p>
+                    </div>
+
+                    <div class="story">
+                        <div class="profile-photo">
+                            <img src="./images/profile-13.jpg" alt="">
+                        </div>
+                        <p class="name">Gifty Owusu</p>
+                    </div>
+                    <!-- ====================== END OF STORIES ======================== -->
+                </div>
+                <form action="" class="create-post">
+                    <div class="profile-photo">
+                        <img src="./images/profile-1.jpg" alt="">
+                    </div>
+                    <input type="text" id="create-post" placeholder="what's on your mind, Naa">
+                    <input class="btn btn-primary" type="submit" value="Post" name="" id="">
+                </form>
             </div>
             <!-- ===========================RIGHT================================= -->
             <div class="right">
