Progressing on the social media app design

--- a/index.html
+++ b/index.html
@@ -533,18 +533,69 @@
                                 </div>
                                 <div class="comments text-muted">View all 1,277 comments</div>
                             </div>
+                             <!-- =========================== END OF FEEDS ================================= -->
                 </div>
             </div>
+             <!-- =========================== END OF MIDDLE ================================= -->
+
+
+
             <!-- ===========================RIGHT================================= -->
             <div class="right">
-                <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, ratione! Hic neque sunt amet nulla 
-                vitae suscipit a consequatur unde! Sint, sequi ipsum debitis
-                 iure repudiandae ipsam voluptatem aliquam quo delectus amet et nihil provident iusto. Ab ducimus fugiat 
-                 sed. Eveniet tenetur nesciunt ea quaerat ad, minus provident 
-                 et maxime, modi blanditiis quas odit perspiciatis nostrum numquam cumque eos? A modi minus, 
-                 in animi nostrum excepturi necessitatibus corporis! A facilis, similique beatae deserunt iusto soluta iste
-                  cumque itaque fugit ullam ducimus est perferendis neque reiciendis quo voluptatum sint? Nemo tempora necessitatibus
-                   reiciendis quo? Sapiente, ut! Dolorem velit magni at natus? -->
+                <div class="messages">
+                    <div class="heading">
+                        <h4>Messages</h4><i class="uil uil-edit"></i>
+                    </div>
+                    <!-- ----------------SEARCH BAR---------------- -->
+                    <div class="search-bar">
+                        <i class="uil uil-search"></i>
+                        <input type="search" placeholder="Search messages" id="message-search">
+                    </div>
+                    <!-- ---------------- MESSAGE CATEGORY ---------------- -->
+                    <div class="category">
+                        <h6 class="active">Primary</h6>
+                        <h6>General</h6> 
+                        <h6 class="message-requests">Requests(7)</h6>
+                    </div>
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-17.jpg" alt="">
+                        </div>
+                        <div class="message-body">
+                            <h5>Edem Quist</h5>
+                            <p class="text-muted">Just woked up bruh</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- ---------------- END OF MESSAGES ---------------- -->
+
+
+                <!-- ---------------- FRIEND REQUEST ---------------- -->
+                <div class="friend-requests">
+                    <h4>Requests</h4>
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-13.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Hajia Bintu</h5>
+                                <p class="text-muted">
+                                    8 mutual friends
+                                </p>
+                                <div class="action">
+                                    <button class="btn btn-primary">
+                                        Accept
+                                    </button>
+                                    <button class="btn">
+                                        Decline 
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
