--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <!-- ------------------------------END OF NOTIFICATION POPUP----------------------- -->
                     </a>
 
-                    <a href="" class="menu-item" id="messages-notifications">
+                    <a href="" class="menu-item" id="le-notifications">
                         <span><i class="uil uil-envelope"></i></i> <small class="notification-count">6</small> </span> <h3>Messages</h3>
                     </a>
 
@@ -560,11 +560,72 @@
                     <!-- ---------------- MESSAGE ---------------- -->
                     <div class="message">
                         <div class="profile-photo">
-                            <img src="./images/profile-17.jpg" alt="">
+                            <img src="./images/profile-2.jpg" alt="">
+                            <!-- <div class="active"></div> -->
                         </div>
                         <div class="message-body">
                             <h5>Edem Quist</h5>
                             <p class="text-muted">Just woked up bruh</p>
+                        </div>
+                    </div>
+
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-3.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Franca Della</h5>
+                            <p class="text-bold">Received bruh</p>
+                        </div>
+                    </div>
+
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-4.jpg" alt="">
+                            <!-- <div class="active"></div> -->
+                        </div>
+                        <div class="message-body">
+                            <h5>Jane Doe</h5>
+                            <p class="text-bold">ok</p>
+                        </div>
+                    </div>
+
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-5.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Daniella Jackson</h5>
+                            <p class="text-bold">2 new messages</p>
+                        </div>
+                    </div>
+
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-6.jpg" alt="">
+                            <!-- <div class="active"></div> -->
+                        </div>
+                        <div class="message-body">
+                            <h5>Juliet Makarey</h5>
+                            <p class="text-muted">lol u right</p>
+                        </div>
+                    </div>
+
+                    <!-- ---------------- MESSAGE ---------------- -->
+                    <div class="message">
+                        <div class="profile-photo">
+                            <img src="./images/profile-7.jpg" alt="">
+                            <div class="active"></div>
+                        </div>
+                        <div class="message-body">
+                            <h5>Chantel Msiah</h5>
+                            <p class="text-bold">Birthday Tomorrow</p>
                         </div>
                     </div>
                 </div>
@@ -583,22 +644,68 @@
                                 <h5>Hajia Bintu</h5>
                                 <p class="text-muted">
                                     8 mutual friends
-                                </p>
-                                <div class="action">
-                                    <button class="btn btn-primary">
-                                        Accept
-                                    </button>
-                                    <button class="btn">
-                                        Decline 
-                                    </button>
-                                </div>
+                                </p> 
                             </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline 
+                            </button>
+                        </div>
+                    </div>
+                    <!-- -------------- -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-14.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Jackline Mensah</h5>
+                                <p class="text-muted">
+                                    5 mutual friends
+                                </p> 
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline 
+                            </button>
+                        </div>
+                    </div>
+                    <!-- -------------- -->
+                    <div class="request">
+                        <div class="info">
+                            <div class="profile-photo">
+                                <img src="./images/profile-15.jpg" alt="">
+                            </div>
+                            <div>
+                                <h5>Jennifer Lawrence</h5>
+                                <p class="text-muted">
+                                    20 mutual friends
+                                </p> 
+                            </div>
+                        </div>
+                        <div class="action">
+                            <button class="btn btn-primary">
+                                Accept
+                            </button>
+                            <button class="btn">
+                                Decline 
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
+            <!-- =============================END OF RIGHT========================== -->
         </div>
-
     </main>
+
+    <!-- ============================= THEME CUSTOMIZATION ========================== -->
 </body>
 </html>
