--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>socialMediaApp - Responsive Social Media Website Using HTML, CSS & JavaScript</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="laptop.css">
+    <link rel="stylesheet" href="mobile.css">
     <!-- ICONSCOUT CDN -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- STYLESHEET -->
@@ -707,5 +709,59 @@
     </main>
 
     <!-- ============================= THEME CUSTOMIZATION ========================== -->
+    <div class="customize-theme">
+        <div class="card">
+            <h2>Customize your View</h2>
+            <p class="text-muted">Manage your font size, color and background.</p>
+
+            <!-- FONT SIZES -->
+            <div class="font-size">
+                <h4>Font size</h4>
+                <div>
+                    <h6>Aa</h6>
+                    <div class="choose-size">
+                        <span class="font-size-1"></span>
+                        <span class="font-size-2 active"></span>
+                        <span class="font-size-3"></span>
+                        <span class="font-size-4"></span>
+                        <span class="font-size-5"></span>
+                    </div>
+                    <h3>Aa</h3>
+                </div>
+            </div>
+            <h3>Aa</h3>
+
+            <!-- PRIMARY COLORS -->
+    <div class="color">
+        <h4>Color</h4>
+        <div class="choose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+        </div>
+    </div>
+    <!-- BACKGROUND COLORS -->
+        <div class="background">
+            <h4>Background</h4>
+            <div class="choose-bg">
+                <div class="bg-1 active">
+                    <span></span>
+                    <h5 for="bg-1">Light</h5>
+                </div>
+                <div class="bg-2">
+                    <span></span>
+                    <h5 for="bg-2">Dim</h5>
+                </div>
+                <div class="bg-3">
+                    <span></span>
+                    <h5 for="bg-3">Lights Out</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
