Finishing with this project

--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                 </a>
                  <!-- ===========================SIDE BAR================================= -->
                  <div class="sidebar">
-                    <a href="" class="menu-item active">
+                    <a href="#" class="menu-item active">
                         <span><i class="uil uil-home"></i></span> <h3>Home</h3>
                     </a>
 
-                    <a href="" class="menu-item">
+                    <a href="#" class="menu-item">
                         <span><i class="uil uil-compass"></i></span> <h3>Explore</h3>
                     </a>
 
-                    <a href="" class="menu-item" id="notifications">
+                    <a href="#" class="menu-item" id="notifications">
                         <span><i class="uil uil-bell"></i><small class="notification-count">9+</small></span> <h3>Notifications</h3>
                         <!-- -------------------------NOTIFICATION POP UP--------------------------- -->
                         <div class="notification-popup">
@@ -127,23 +127,23 @@
                         <!-- ------------------------------END OF NOTIFICATION POPUP----------------------- -->
                     </a>
 
-                    <a href="" class="menu-item" id="le-notifications">
+                    <a href="#" class="menu-item" id="messages-notification">
                         <span><i class="uil uil-envelope"></i></i> <small class="notification-count">6</small> </span> <h3>Messages</h3>
                     </a>
 
-                    <a href="" class="menu-item">
+                    <a href="#" class="menu-item">
                         <span><i class="uil uil-bookmark"></i></span> <h3>Bookmarks</h3>
                     </a>
 
-                    <a href="" class="menu-item">
+                    <a href="#" class="menu-item">
                         <span><i class="uil uil-chart-line"></i></span> <h3>Analytics</h3>
                     </a>
 
-                    <a href="" class="menu-item">
+                    <a href="#" class="menu-item" id="theme">
                         <span><i class="uil uil-palette"></i></span> <h3>Theme</h3>
                     </a>
 
-                    <a href="" class="menu-item">
+                    <a href="#" class="menu-item">
                         <span><i class="uil uil-setting"></i></span> <h3>Settings</h3>
                     </a>
                  </div>
@@ -763,5 +763,10 @@
     </div>
 </div>
 
+
+
+
+
+<script src="./index.js"></script>
 </body>
 </html>
